...
            "state" : "translated",
            "value" : "Безопасность и поддержка"
          }
        }
      }
    },
    "Боб Тестов" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Боб Тестов"
...
            "state" : "translated",
            "value" : "Люди"
          }
        }
      }
    },
    "Люди, каналы, сообщения" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Люди, каналы, сообщения"
...
            "state" : "translated",
            "value" : "Чат"
          }
        }
      }
    },
    "Чаты" : {
      "extractionState" : "manual",
      "localizations" : {
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Чаты"
...
